tests/valid/08_strings.mini0
// Strings y escapes

fun main()
    s: string
    s = "Hola Mundo"
    s = "Con escape: \n\t\"\\"
end