tests/invalid/06_string_sin_cerrar.mini0
// String sin comilla de cierre

fun main()
    s: string
    s = "hola
end